force-app/main/default/objects/AD_User__c/AD_User__c.object-meta.xml
<CustomObject>
    <description>Active Directory Users</description>
    <label>AD User</label>
    <nameField>
        <displayFormat>AU-{00000}</displayFormat>
        <label>AD User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AD Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>