force-app/main/default/objects/AD_User__c/fields/AD_Federation_Id__c.field-meta.xml
<CustomField>
    <fullName>AD_Federation_Id__c</fullName>
    <label>AD Federation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>