force-app/main/default/objects/AD_User__c/fields/AD_First_Name__c.field-meta.xml
<CustomField>
    <fullName>AD_First_Name__c</fullName>
    <label>AD First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>