force-app/main/default/objects/AD_User__c/fields/AD_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>AD_Last_Name__c</fullName>
    <label>AD Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>