force-app/main/default/objects/AD_User__c/fields/AD_User_Email__c.field-meta.xml
<CustomField>
    <fullName>AD_User_Email__c</fullName>
    <label>AD User Email</label>
    <type>Email</type>
</CustomField>