force-app/main/default/objects/AD_User__c/fields/SECID__c.field-meta.xml
<CustomField>
    <fullName>SECID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>SECID</label>
    <type>AutoNumber</type>
</CustomField>