force-app/main/default/objects/AD_User__c/recordTypes/ADUserMain.recordType-meta.xml
<RecordType>
    <fullName>ADUserMain</fullName>
    <active>true</active>
    <label>ADUserMain</label>
</RecordType>