force-app/main/default/objects/AD_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AD_First_Name__c</columns>
    <columns>AD_Last_Name__c</columns>
    <columns>AD_User_Email__c</columns>
    <columns>SECID__c</columns>
    <columns>AD_Federation_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>